# how-to-openacc-cmake

./: .gitignore  CMakeLists.txt  README.md  hello.cpp
